fixed ul whitespace issue

--- a/pr2/static/style.css
+++ b/pr2/static/style.css
@@ -162,6 +162,12 @@ label{
 	visibility: hidden;
 }
 
+/* Error, used when form is invalid */
+.error {
+	color: crimson;
+	display: none;
+}
+
 .switchCursor {
 	cursor: crosshair;
 }
@@ -170,6 +176,7 @@ label{
 	padding: 15px;
 	background-color: white;
 	display: inline-block;
+	font-size: 15px;
 }
 
 .left{
@@ -179,7 +186,7 @@ label{
 }
 .right{
 	color: #6d6a6a;
-	width: 450px;
+	width: 480px;
 	float: left;
 	font-family: 'adelle',serif;
 	line-height: 1.5;
@@ -191,7 +198,7 @@ label{
 .listings li{
 	display: inline-block;
 	position: relative;
-	width: 570px;
+	width: 600px;
 	margin: 5px;
  }
  
@@ -281,13 +288,18 @@ h2{
 
 #event-listing{
 	padding: 10px 0px;
-	
+
+}
+
+.listings{
+	font-size: 0px;
 }
 	/* styles for the type */
 
 .study{
 	background-color: #99927A;
 }
+
 .food{
 	background-color: #CCAC3D;
 }
@@ -295,13 +307,11 @@ h2{
 .show{
 	background-color: #FFBD66;
 }
+
 .talk{
 	background-color: #CCFAFF;
 }
+
 .misc{
 	background-color: #3DCCB3;
 }
-
-
-
-
